Stop hiding menu bar elements on smaller screens, since with the new navigation this is no longer needed

--- a/source/theme/styles/components/_main-navigation.scss
+++ b/source/theme/styles/components/_main-navigation.scss
@@ -284,12 +284,6 @@ ul:last-child > .title-bar__item:first-child {
   }
 }
 
-@media only screen and (max-width: 640px) {
-  .title-bar__item {
-    display: none;
-  }
-}
-
 /*
  * Dark mode
  */
